# monomcp-rust

./: .gitignore  .gitmodules  Cargo.toml
analysis_results/MoCoPr/: README.md
analysis_results/MoCoPr/project_metadata-phase/: data.parquet
analysis_results/agentic-core/: README.md
analysis_results/agentic-core/project_metadata-phase/: data.parquet
analysis_results/agentic-tui/: README.md
analysis_results/agentic-tui/project_metadata-phase/: data.parquet
analysis_results/cargo-repo/: README.md
analysis_results/cargo-repo/project_metadata-phase/: data.parquet
analysis_results/mcp-attr/: README.md
analysis_results/mcp-attr-codegen/: README.md
analysis_results/mcp-attr-codegen/project_metadata-phase/: data.parquet
analysis_results/mcp-attr-macros/: README.md
analysis_results/mcp-attr-macros/project_metadata-phase/: data.parquet
analysis_results/mcp-attr/project_metadata-phase/: data.parquet
analysis_results/mcp-discovery/: README.md
analysis_results/mcp-discovery/project_metadata-phase/: data.parquet
analysis_results/memkb-mcp-rust/: README.md
analysis_results/memkb-mcp-rust/project_metadata-phase/: data.parquet
analysis_results/monomcp-core/: README.md
analysis_results/monomcp-core/project_metadata-phase/: data.parquet
analysis_results/paiml-mcp-agent-toolkit-server/: README.md
analysis_results/paiml-mcp-agent-toolkit-server/project_metadata-phase/: data.parquet
analysis_results/rmcp-agent/: README.md
analysis_results/rmcp-agent/project_metadata-phase/: data.parquet
analysis_results/rust-mcp-filesystem/: README.md
analysis_results/rust-mcp-filesystem/project_metadata-phase/: data.parquet
analysis_results/rust-mcp-sdk-hello-world-mcp-server/: README.md
analysis_results/rust-mcp-sdk-hello-world-mcp-server/project_metadata-phase/: data.parquet
analysis_results/rust-mcp-sdk-rust-mcp-macros/: README.md
analysis_results/rust-mcp-sdk-rust-mcp-macros/project_metadata-phase/: data.parquet
analysis_results/rust-mcp-sdk-rust-mcp-sdk/: README.md
analysis_results/rust-mcp-sdk-rust-mcp-sdk/project_metadata-phase/: data.parquet
analysis_results/rust-mcp-sdk-rust-mcp-transport/: README.md
analysis_results/rust-mcp-sdk-rust-mcp-transport/project_metadata-phase/: data.parquet
analysis_results/rust-mcp-sdk-simple-mcp-client/: README.md
analysis_results/rust-mcp-sdk-simple-mcp-client-core/: README.md
analysis_results/rust-mcp-sdk-simple-mcp-client-core/project_metadata-phase/: data.parquet
analysis_results/rust-mcp-sdk-simple-mcp-client/project_metadata-phase/: data.parquet
analysis_results/starlit-gui/: README.md
analysis_results/starlit-gui/project_metadata-phase/: data.parquet
docs/: CRQs_and_Poem.md  GEMINI.md  Social_Media_Content_Pipeline_CRQ.md  blog_post_fuzzer_submodule_sync.md  index.html  progress_summary_2025-08-28.md  script.js  style.css
docs/crq/: 2025-08-28-arm64-simd-kernels-build-issue.md  2025-08-28-single-static-runtime-monomcp.md
docs/sops/: project_setup_sop.md  rust_crate_vendorization_sop.md  rust_crate_workspace_integration_sop.md  submodule_management_sop.md
monomcp/: Cargo.toml  GEMINI.md  build.sh
monomcp/generative_modular_forms/: Cargo.toml
monomcp/generative_modular_forms/src/: lib.rs
monomcp/models/diagram/mermaid/fuzzing/: Cargo.toml
monomcp/models/diagram/mermaid/fuzzing/fuzz_targets/: fuzz_mermaid_escaping.rs  fuzz_mermaid_generation.rs  fuzz_mermaid_performance.rs
monomcp/models/diagram/mermaid/hash_repro_crate/: Cargo.toml
monomcp/models/diagram/mermaid/hash_repro_crate/src/: lib.rs
monomcp/monomcp-core/: Cargo.toml
monomcp/monomcp-core/src/: lib.rs
project_reporter/: Cargo.toml  GEMINI.md
project_reporter/src/: main.rs
sessions/: GEMINI.md
